[gd_scene load_steps=15 format=3 uid="uid://0grmhf3aqil4"]

[ext_resource type="PackedScene" uid="uid://bw0kjoybdcexh" path="res://Scenes/Classes/tip_ui.tscn" id="1_870df"]
[ext_resource type="Script" path="res://Scripts/UI-Tips/enemy_ui.gd" id="2_f84s5"]
[ext_resource type="Texture2D" uid="uid://d3ih0yc4q7ojo" path="res://Assets/Images/UI/Pages/red.png" id="3_ji33a"]
[ext_resource type="Texture2D" uid="uid://j68gd7t8w0t3" path="res://Assets/Images/UI/SeenBook/Enemies/Textures/enemy0.png" id="4_u7jyx"]
[ext_resource type="FontFile" uid="uid://drfv8ak22g1rm" path="res://Assets/Fonts/simhei.ttf" id="5_22dfs"]
[ext_resource type="Texture2D" uid="uid://08xnqnqn18s2" path="res://Assets/Images/UI/Pages/pxArt (1).png" id="5_gy33a"]
[ext_resource type="FontFile" uid="uid://b0ev28ueo51cu" path="res://Assets/Fonts/5_Minecraft AE(支持中文).ttf" id="6_m48uk"]
[ext_resource type="AudioStream" uid="uid://cviyfrmvl7m" path="res://Assets/Sounds/FXs/UIs/TipCloseAudio.mp3" id="8_aafan"]
[ext_resource type="AudioStream" uid="uid://byscys7edg586" path="res://Assets/Sounds/FXs/UIs/TipTextureAudio.mp3" id="8_yl6kd"]
[ext_resource type="AudioStream" uid="uid://b2wskyv0fi2i6" path="res://Assets/Sounds/FXs/UIs/TipWritingAudio.wav" id="9_ui8ia"]

[sub_resource type="Animation" id="Animation_hm80k"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Paper/Icon:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-331.359, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Paper/Icon:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-7.62543, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Paper/Icon:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-0.123438, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Paper/Icon:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Paper/NameLabel:visible_ratio")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Paper/IntroLabel:visible_ratio")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Paper/TagLabel:visible_ratio")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Paper/OKButton:position:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(177.464, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("ButtonAppearAudio:playing")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("TipTextureAudio:playing")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("TipWritingAudio:playing")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath(".:can_control")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/12/type = "bezier"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Paper/NameLabel:self_modulate:a")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.2, 0, 0.2, 0),
"times": PackedFloat32Array(0)
}
tracks/13/type = "bezier"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("Paper/IntroLabel:modulate:a")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.2, 0, 0.2, 0),
"times": PackedFloat32Array(0)
}
tracks/14/type = "bezier"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Paper/TagLabel:self_modulate:a")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.2, 0, 0.2, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_oylrx"]
resource_name = "hide"
length = 0.4
step = 0.1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Paper/Icon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-0.123438, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.1, 0.4)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Paper/Icon:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-331.359, -0.25, 0, 0.25, 0, -12.478, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.1, 0.4)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Paper/Icon:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-7.62543, -0.25, 0, 0.25, 0, -7.62543, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.1, 0.4)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Paper/Icon:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.1, 0.4)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Paper/NameLabel:self_modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.2, 0, 0.2, 0, 0, -0.2, 0, 0.2, 0),
"times": PackedFloat32Array(0, 0.2)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Paper/IntroLabel:modulate:a")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.2, 0, 0.2, 0, 0, -0.2, 0, 0.2, 0),
"times": PackedFloat32Array(0, 0.2)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Paper/TagLabel:self_modulate:a")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.2, 0, 0.2, 0, 0, -0.2, 0, 0.2, 0),
"times": PackedFloat32Array(0, 0.2)
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".:can_control")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_2vd7u"]
resource_name = "show"
length = 2.7
step = 0.1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Paper/Icon:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-30.5017, -0.25, 0, 0.25, 0, -331.359, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.6, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Paper/Icon:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-7.62543, -0.25, 0, 0.25, 0, -7.62543, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.6, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Paper/Icon:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, -0.123438, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.6, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Paper/Icon:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.5, 0.9)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Paper/NameLabel:visible_ratio")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(1, 0),
"points": PackedFloat32Array(0, 0, 0, 0, 0, 1, 0, 0, 0, 0),
"times": PackedFloat32Array(1, 1.2)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Paper/IntroLabel:visible_ratio")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(1.3, 2)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Paper/TagLabel:visible_ratio")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(2, 2.5)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Paper/OKButton:position:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(79.7205, -0.25, 0, 0.25, 0, 177.464, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(2.4, 2.7)
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("ButtonAppearAudio:playing")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(2.4),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("TipTextureAudio:playing")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("TipWritingAudio:playing")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath(".:can_control")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0, 2.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_08uqu"]
_data = {
"RESET": SubResource("Animation_hm80k"),
"hide": SubResource("Animation_oylrx"),
"show": SubResource("Animation_2vd7u")
}

[node name="EnemyUI" instance=ExtResource("1_870df")]
script = ExtResource("2_f84s5")
enemy_id = 1

[node name="Title" parent="Paper" index="0"]
position = Vector2(-193.409, -217.671)
scale = Vector2(0.981602, 0.981602)
texture = ExtResource("3_ji33a")
region_rect = Rect2(220, 240, 364, 114)

[node name="Label" parent="Paper/Title" index="0"]
text = "新敌人 ！"

[node name="OKButton" parent="Paper" index="1"]
offset_left = 105.369
offset_right = 339.37

[node name="Label" parent="Paper/OKButton" index="0"]
offset_left = 16.638
offset_top = 4.16009
offset_right = 438.638
offset_bottom = 146.16

[node name="Icon" type="Sprite2D" parent="Paper" index="2"]
position = Vector2(-331.359, -7.62543)
rotation = -0.123438
scale = Vector2(0.93257, 0.93257)
texture = ExtResource("5_gy33a")
region_enabled = true
region_rect = Rect2(117, 132, 308, 293)

[node name="EnemyTexture" type="TextureRect" parent="Paper/Icon" index="0"]
show_behind_parent = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -279.421
offset_top = -276.665
offset_right = -23.4209
offset_bottom = -20.6643
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_u7jyx")

[node name="NameLabel" type="Label" parent="Paper" index="3"]
modulate = Color(0, 0, 0, 1)
offset_left = -148.349
offset_top = -140.724
offset_right = 139.651
offset_bottom = -67.724
scale = Vector2(0.567333, 0.567333)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("5_22dfs")
theme_override_font_sizes/font_size = 72
text = "尸国杂兵"
visible_characters = 0
visible_ratio = 0.0

[node name="IntroLabel" type="Label" parent="Paper" index="4"]
modulate = Color(0.215686, 0, 0, 1)
offset_left = -148.0
offset_top = -83.8798
offset_right = 1278.0
offset_bottom = 141.12
scale = Vector2(0.34527, 0.34527)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("6_m48uk")
theme_override_font_sizes/font_size = 72
text = "不要小瞧这些看似弱小的虫型生物，它们狩猎时常成群结队，即使是最有经验的沙漠旅人也不敢大意。"
autowrap_mode = 3
visible_characters = 0
visible_ratio = 0.0

[node name="TagLabel" type="Label" parent="Paper" index="5"]
modulate = Color(0, 0, 0, 1)
offset_left = -143.0
offset_top = 35.0
offset_right = 1283.0
offset_bottom = 506.0
scale = Vector2(0.289934, 0.289934)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("6_m48uk")
theme_override_font_sizes/font_size = 72
text = "-极其强悍
-极高范围真实伤害
-损失5点生命值
-死亡自爆
-慢速"
visible_characters = 0
visible_ratio = 0.0

[node name="EnemyTipAnimationPlayer" type="AnimationPlayer" parent="." index="3"]
libraries = {
"": SubResource("AnimationLibrary_08uqu")
}
autoplay = "show"

[node name="TipTextureAudio" type="AudioStreamPlayer" parent="." index="6"]
stream = ExtResource("8_aafan")
bus = &"Sound"

[node name="TipWritingAudio" type="AudioStreamPlayer" parent="." index="7"]
stream = ExtResource("9_ui8ia")
bus = &"Sound"

[node name="TipCloseAudio" parent="." index="8"]
stream = ExtResource("8_yl6kd")
